# SPA_web_applications

./: Dockerfile  README.md  celerybeat-schedule.db  default.conf  docker-compose.yaml  env.simple  pyproject.toml
config/: celery.py  settings.py  urls.py
habits/: admin.py  models.py  tasks.py  tests.py  urls.py  views.py
habits/fixtures/: habits.json
habits/migrations/: 0001_initial.py  0002_remove_habit_reminder_period_days_and_more.py  0003_alter_habit_reminder_frequency_days.py  0004_alter_habit_linked_habit_alter_habit_pleasant_habit_and_more.py  0005_alter_habit_pleasant_habit.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/fixtures/: users.json
users/management/commands/: create_superuser.py
users/migrations/: 0001_initial.py  0002_alter_user_tg_id.py
